test/errors/wav-mono/wav-mono.rom
Error in `wav-mono.asm` on line 1: WAV is not mono
